[package]
name = "simple-server-warp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
nix = { version = "0.29.0", features = ["resource"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
warp = { version = "0.3.7", features = ["tls"] }
#warp = { path = "./vendor/warp", features = ["tls"] }
